<resources>
    <string name="app_name">SAU-CS Indoor Navigation</string>
    <string name="create_new_account">YENİ HESAP OLUŞTUR</string>
    <string name="enter_account">HESABIM VAR</string>
    <string name="username">Kullanıcı Adi</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">HESAP OLUŞTUR</string>
    <string name="sign_in">GİRİŞ YAP</string>

    <string name="title_activity_main">SAU-CS Indoor Navigation</string>
    <string name="dummy_button">Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kadir</string>
    <string name="nav_header_subtitle">deneme@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
