<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@color/colorPrimary"
    android:padding="20dp"
    >

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/navigation_logo2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtWelcome"
        android:layout_marginTop="50dp"
        />

    
    <Button
        android:id="@+id/btnWelcomeLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRedButton"
        android:text="@string/enter_account"
        android:textColor="@color/colorWhite"
        android:layout_above="@+id/btnWelcomeRegister"
        android:layout_marginBottom="35dp"
        />
    <Button
        android:id="@+id/btnWelcomeRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGreyButton"
        android:text="@string/create_new_account"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        />


</RelativeLayout>